syntax = "proto3";
package kira.gov;

import "gogoproto/gogo.proto";

option go_package = "github.com/KiraCore/sekai/INTERX/proto-gen/kira/gov";

message MsgCreateRole {
  bytes proposer = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
  string role_sid = 2;
  string role_description = 3;
}

message MsgAssignRole {
  bytes proposer = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
  bytes address = 2 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.moretags) = "yaml:\"address\""
  ];
  uint32 roleId = 3;
}

message MsgRemoveRole {
  bytes proposer = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
  bytes address = 2 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.moretags) = "yaml:\"address\""
  ];
  uint32 roleId = 3;
}

message MsgWhitelistRolePermission {
  bytes proposer = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];

  string roleIdentifier = 2; // sid or id
  uint32 permission = 3;
}

message MsgBlacklistRolePermission {
  bytes proposer = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
  string roleIdentifier = 2; // sid or id
  uint32 permission = 3;
}

message MsgRemoveWhitelistRolePermission {
  bytes proposer = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
  string roleIdentifier = 2; // sid or id
  uint32 permission = 3;
}

message MsgRemoveBlacklistRolePermission {
  bytes proposer = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
  string roleIdentifier = 2; // sid or id
  uint32 permission = 3;
}

message Role {
  uint32 id = 1;  // (integer) - auto assigned
  string sid = 2; // string identifier unique variable name
  string description = 3;
  // Role permissions are managed in different store for storage efficiency
} 
