syntax = "proto3";
package kira.tokens;

import "gogoproto/gogo.proto";

import "kira/tokens/alias.proto";
import "kira/tokens/proposal.proto";
import "kira/tokens/rate.proto";
import "kira/tokens/freeze.proto";

option go_package = "github.com/KiraCore/sekai/x/tokens/types";

// Msg defines the tokens Msg service.
service Msg {
    // UpsertTokenAlias defines a method to upsert token alias
    rpc UpsertTokenAlias(MsgUpsertTokenAlias) returns (MsgUpsertTokenAliasResponse);
    // UpsertTokenRate defines a method to upsert token rate
    rpc UpsertTokenRate(MsgUpsertTokenRate) returns (MsgUpsertTokenRateResponse);
    // EthereumTx defines a method to send ethereum transaction
    rpc EthereumTx(MsgEthereumTx) returns (MsgEthereumTxResponse);
}

message MsgUpsertTokenAliasResponse {}
message MsgUpsertTokenRateResponse {}

message MsgEthereumTx {
  string tx_type = 1;
  string sender = 2;
  string hash = 3;
  bytes data = 4;
}
message MsgEthereumTxResponse {}
